Add download bin index.html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Render All Elements Normally -->
     <link rel="stylesheet" href="normalize.css">
     <!-- Font Awesome Icone -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Google Font -->
     <link rel="stylesheet" href="">
 </head>
@@ -57,6 +57,20 @@
         </div>
     </div>
     <!-- End Home Section -->
+
+    <!-- Start Download Section  -->
+    <div class="download">
+        <div class="container">
+            <div class="text">
+            </div>
+            <div class="btn">
+                <a href="App/RAYA.apk" download='App' class="download-btn">Download App
+                    <i class="fa fa-download"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- End Download Section -->
 </body>
 
 </html>
