--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             <div class="text">
             </div>
             <div class="btn">
-                <a href="#" onclick="downloadApp()" class="download-btn">Download App</a>
+                <a href="#" onclick="downloadApp()" class="download-btn">Download App
+                    <i class="fa fa-download"></i></a>
             </div>
-
             <script>
                 function downloadApp() {
                     var downloadLink = document.createElement('a');
@@ -75,7 +75,6 @@
                     downloadLink.click();
                 }
             </script>
-
         </div>
     </div>
     <!-- End Download Section -->
