--- a/index.html
+++ b/index.html
@@ -6,66 +6,132 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AR Raya Cards</title>
-    <!-- Main Templeate Css File -->
-    <link rel="stylesheet" href="style.css">
-    <!-- Render All Elements Normally -->
-    <link rel="stylesheet" href="normalize.css">
-    <!-- Font Awesome Icone -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Google Font -->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/normalize.css" />
+    <!-- Main File css -->
+    <link rel="stylesheet" href="css/style.css" />
+    <!-- Awesome icon -->
+    <link rel="stylesheet" href="css/all.min.css" />
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
 </head>
 
 <body>
     <!-- Start Header -->
     <div class="header">
         <div class="container">
-            <img src="" alt="" class="logo">
-            <div class="links">
-                <span class="icon">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </span>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#featuers">Features</a></li>
-                    <li><a href="#contact">Contact Us</a></li>
+          <a href="#" class="logo"><img src="images/logo.jpg" alt=""></a>
+          <ul class="main-nav">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#download">Download</a></li>
+            <li><a href="#features">Features</a></li>
+            <li>
+              <a href="#">Other Links</a>
+              <!-- Start Megamenu -->
+              <div class="mega-menu">
+                <div class="image">
+                  <img src="images/megamenu.png" alt="" />
+                </div>
+                <ul class="links">
+                  <li>
+                    <a href="#testimonials"
+                      ><i class="far fa-comments fa-fw"></i> Testimonials</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#team"
+                      ><i class="far fa-user fa-fw"></i> Team Members</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#services"
+                      ><i class="far fa-building fa-fw"></i> Services</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#our-skills"
+                      ><i class="far fa-check-circle fa-fw"></i> Our Skills</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#work-steps"
+                      ><i class="far fa-clipboard fa-fw"></i> How It Works</a
+                    >
+                  </li>
                 </ul>
-            </div>
+                <ul class="links">
+                  <li>
+                    <a href="#events"
+                      ><i class="far fa-calendar-alt fa-fw"></i> Events</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#pricing"
+                      ><i class="fas fa-server fa-fw"></i> Pricing Plans</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#video"
+                      ><i class="far fa-play-circle fa-fw"></i> Top Videos</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#stats"
+                      ><i class="far fa-chart-bar fa-fw"></i> Stats</a
+                    >
+                  </li>
+                  <li>
+                    <a href="#discount"
+                      ><i class="fas fa-percent fa-fw"></i> Request A Discount</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
         </div>
-    </div>
+      </div>
     <!-- End Header -->
+       <!-- Start Landing -->
 
-
-
-    <!-- Start Home Section -->
-    <div class="home">
+    <div class="landing">
         <div class="container">
-            <div class="text">
-                <div class="text-1">AR BUSINESS CARD CREATOR</div>
-                <h1 class="heading-1">Be the first to know when we go live!</h1>
-                <p>
-                    Our online AR business card creator is launching very soon. Quickly design and purchase your very
-                    own Augmented Reality business cards in minutes. Enter your details below, and we'll get in touch as
-                    soon as it goes live!
-                </p>
-            </div>
-            <div class="imag">
-                <img src="imag/img_Header 1.png" alt="">
-            </div>
+          <div class="text">
+            <div  class="text-1">AR BUSINESS CARD CREATOR</div>
+            <h1 class="heading-1" >Be the first to know when we go live!</h1>
+            <p>
+                Our online AR business card creator is launching very soon. Quickly design and purchase your very
+                own Augmented Reality business cards in minutes. Enter your details below, and we'll get in touch as
+                soon as it goes live!
+            </p>
+          </div>
+          <div class="image"><img src="images/img_Header 1.png" alt="" /></div>
         </div>
-    </div>
-    <!-- End Home Section -->
+      </div>
+      <!-- End Landing -->
+
+
+   
 
     <!-- Start Download Section  -->
-    <div class="download">
-        <div class="container">
-            <div class="text">
-            </div>
-            <div class="btn">
-                <a href="#" onclick="downloadApp()" class="download-btn">Download App
-                    <i class="fa fa-download"></i></a>
+    <div class="download" id="download">
+        <div class="warapper">
+            <div class="w-layout-grid video-grid">
+                <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/6064514cb13a696ccd10a887_Compressed%20GIF.gif" alt="">
+                <div class="video-grid-content gif">
+                    <div class="text-caps">NEEDED  APPS TO VIEW YOUR AR CARDS</div>
+                    <h2 class="heading-2">Web-based Augmented Reality Technology</h2>
+                    <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                         Quasi eaque commodi dolore inventore, accusamus repudiandae doloribus sed modi tempore ullam deleniti sint soluta fugit tenetur earum quam culpa in vel?</p>
+                    <div class="btn">
+                        <a href="#" onclick="downloadApp()" class="download-btn">Download App
+                            <i class="fa fa-download"></i></a>
+                    </div>
+                </div>
             </div>
             <script>
                 function downloadApp() {
