--- a/index.html
+++ b/index.html
@@ -144,6 +144,67 @@
         </div>
     </div>
     <!-- End Download Section -->
+
+
+    <!-- Start Features Section -->
+    <div class="featuers">
+        <div class="container">
+            <div class="wrapper">
+                <div class="title">
+                <h2 class="heading-2">Easy-to-use</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, velit? Obcaecati, pariatur voluptatibus! Hic eaque debitis porro sunt, sequi ex provident libero eos ipsam, numquam quis quo deleniti reiciendis vitae.</p>
+            </div>
+            <div class="featuer">
+                <div class="feature-grid">
+                    <div class="card card-shadow">
+                        <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/60634366c830268a8a0f8c16_Tick.jpg" alt="" class="card-image">
+                        <div class="card-body">
+                            <h3 class="heading-5">App required</h3>
+                            <p class="text textcard">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolore maioincidunt optio. Beatae totam nobis error dignissimos officia.</p>
+                        </div>
+                    </div>
+                    <div class="card card-shadow">
+                        <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/60634366c830268a8a0f8c16_Tick.jpg" alt="" class="card-image">
+                        <div class="card-body">
+                            <h3 class="heading-5">App required</h3>
+                            <p class="text textcard">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolore maioincidunt optio. Beatae totam nobis error dignissimos officia.</p>
+                        </div>
+                    </div>
+                    <div class="card card-shadow">
+                        <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/60634366c830268a8a0f8c16_Tick.jpg" alt="" class="card-image">
+                        <div class="card-body">
+                            <h3 class="heading-5">App required</h3>
+                            <p class="text textcard">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolore maioincidunt optio. Beatae totam nobis error dignissimos officia.</p>
+                        </div>
+                    </div>
+                    <div class="card card-shadow">
+                        <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/60634366c830268a8a0f8c16_Tick.jpg" alt="" class="card-image">
+                        <div class="card-body">
+                            <h3 class="heading-5">App required</h3>
+                            <p class="text textcard">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolore maioincidunt optio. Beatae totam nobis error dignissimos officia.</p>
+                        </div>
+                    </div>
+                    <div class="card card-shadow">
+                        <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/60634366c830268a8a0f8c16_Tick.jpg" alt="" class="card-image">
+                        <div class="card-body">
+                            <h3 class="heading-5">App required</h3>
+                            <p class="text textcard">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolore maioincidunt optio. Beatae totam nobis error dignissimos officia.</p>
+                        </div>
+                    </div>
+                    <div class="card card-shadow">
+                        <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/60634366c830268a8a0f8c16_Tick.jpg" alt="" class="card-image">
+                        <div class="card-body">
+                            <h3 class="heading-5">App required</h3>
+                            <p class="text textcard">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dolore maioincidunt optio. Beatae totam nobis error dignissimos officia.</p>
+                        </div>
+                    </div>
+                </div> 
+              </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Featuers Section -->
 </body>
 
 </html>
