--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
           </div>
           <div id="form-content">
             <!-- Initial form content -->
-            <div class="form-group" id="student-form">
+            <div class="form-group" id="student-form" style="display:none;">
               <label for="name">Name:</label>
               <input type="text" id="name" name="name" required placeholder="Name">
               <div class="upload">
@@ -326,11 +326,9 @@
               <input type="email" id="gmail" name="gmail" required placeholder="Email">
               <button type="submit">Submit</button>
             </div>
-            <div class="form-group">
+            <div id="company-form" class="form-group" style="display: none;">
               <label for="name">Name:</label>
               <input type="text" id="name" name="name" required placeholder="Name">
-            </div>
-            <div id="company-form" class="form-group" style="display: none;">
               <label for=" location">Location:</label>
               <input type="text" id="location" name="location" required placeholder="Location">
               <label for="facebook">Facebook:</label>
