--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AR Raya Cards</title>
   <!-- Normalize css -->
   <link rel="stylesheet" href="css/normalize.css" />
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <!-- Awesome icon -->
   <link rel="stylesheet" href="css/all.min.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 
   <!-- Google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -20,31 +20,28 @@
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800&display=swap"
     rel="stylesheet" />
   <!-- Assest css -->
-  <link rel="stylesheet" href="assets/css/swiper-bundle.min.css">
-  <link rel="stylesheet" href="assets/css/Galarystyles.css">
-  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/swiper-bundle.min.css" />
+  <link rel="stylesheet" href="assets/css/Galarystyles.css" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet" />
 
   <!-- Favicon URL -->
-  <link rel="icon" href="images/favicon.ico">
-
+  <link rel="icon" href="images/favicon.ico" />
 </head>
 
 <body>
   <!-- Start Header -->
   <div class="header">
     <div class="container">
-      <a href="#" class="logo"><img src="images/logo.jpg" alt=""></a>
+      <a href="#" class="logo"><img src="images/logo.jpg" alt="" /></a>
       <ul class="main-nav">
         <li><a href="#home">Home</a></li>
         <li><a href="#download">Download</a></li>
         <li><a href="#features">Features</a></li>
+        <li><a href="#order">Order</a></li>
         <li>
-          <a href="#">Other Links</a>
-          <!-- Start Megamenu -->
+          <a href="#">Other</a>
+          <!-- Start Mega menu -->
           <div class="mega-menu">
-            <div class="image">
-              <img src="" alt="" />
-            </div>
             <ul class="links">
               <li>
                 <a href="Backend/phplogin/index.php"><i class="fa-solid fa-lock"></i> Admin Login</a>
@@ -90,14 +87,22 @@
     <div class="container">
       <div class="text">
         <div class="text-1">AR BUSINESS CARD CREATOR</div>
-        <h1 class="heading-1">Be the first to know when we go live!</h1>
+        <h1 class="heading-1">
+          Enjoy An Unparalleled Interactive Experience!
+        </h1>
         <p>
-          Our online AR business card creator is launching very soon. Quickly design and purchase your very
-          own Augmented Reality business cards in minutes. Enter your details below, and we'll get in touch as
-          soon as it goes live!
+          Revolutionize your marketing with augmented reality business cards.
+          Stand out from the competition, leave a lasting impression, and
+          captivate your audience with interactive videos and 3D product
+          previews. Elevate your brand with our cutting-edge AR business
+          cards.
         </p>
       </div>
-      <div class="image"><img src="images/img_Header 1.png" alt="" /></div>
+      <div class="image">
+        <img
+          src="https://img.freepik.com/free-vector/content-aggregator-abstract-concept-illustration_335657-3687.jpg?w=740&t=st=1685460942~exp=1685461542~hmac=591523ca323259d87b597d6dc812b98842882f58eadc8758d59402803fcc5ff3"
+          alt="" />
+      </div>
     </div>
   </div>
   <!-- End Landing -->
@@ -107,24 +112,29 @@
       <div class="w-layout-grid video-grid">
         <img
           src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/6064514cb13a696ccd10a887_Compressed%20GIF.gif"
-          alt="">
+          alt="" />
         <div class="video-grid-content gif">
-          <div class="text-caps">NEEDED APPS TO VIEW YOUR AR CARDS</div>
-          <h2 class="heading-2">Web-based Augmented Reality Technology</h2>
-          <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-            Quasi eaque commodi dolore inventore, accusamus repudiandae doloribus sed modi tempore ullam deleniti sint
-            soluta fugit tenetur earum quam culpa in vel?</p>
+          <div class="text-caps">NEEDED APP TO VIEW YOUR AR CARD</div>
+          <h2 class="heading-2">
+            Enhance Your Marketing Strategy with Augmented Reality Business
+            Cards!
+          </h2>
+          <p class="text">
+            Order now and unlock the power of augmented reality with our
+            business cards. Simply download our mobile app, scan your card,
+            and immerse yourself in an unforgettable experience.
+          </p>
           <div class="btn">
-            <a href="#" onclick="downloadApp()" class="download-btn">Download App
-              <i class="fa fa-download"></i></a>
+            <a href="#" onclick="downloadApp()" class="download-btn">Download App <i class="fa fa-download"></i></a>
           </div>
         </div>
       </div>
       <script>
         function downloadApp() {
-          var downloadLink = document.createElement('a');
-          downloadLink.href = 'https://drive.google.com/uc?export=download&id=1M_7obx-GGuys4EtJzeciORx1h2lR7F3a';
-          downloadLink.setAttribute('download', 'App');
+          var downloadLink = document.createElement("a");
+          downloadLink.href =
+            "https://drive.google.com/uc?export=download&id=1M_7obx-GGuys4EtJzeciORx1h2lR7F3a";
+          downloadLink.setAttribute("download", "App");
           downloadLink.click();
         }
       </script>
@@ -136,59 +146,76 @@
     <div class="container">
       <div class="wrapper">
         <div class="title">
-          <h2 class="heading-2">Easy-to-use</h2>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, velit? Obcaecati, pariatur voluptatibus!
-            Hic eaque debitis porro sunt, sequi ex provident libero eos ipsam, numquam quis quo deleniti reiciendis
-            vitae.</p>
+          <h2 class="heading-2">Provided Features</h2>
         </div>
         <div class="featuer">
           <div class="feature-grid">
             <div class="card card-shadow">
               <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/60634366c830268a8a0f8c16_Tick.jpg"
-                alt="" class="card-image">
+                alt="" class="card-image" />
               <div class="card-body">
                 <h3 class="heading-5">App required</h3>
-                <p class="text textcard">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <p class="text textcard">
+                  You need to download an app to view your Augmented Reality
+                  Card
+                </p>
               </div>
             </div>
             <div class="card card-shadow">
-              <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/60634366c830268a8a0f8c16_Tick.jpg"
-                alt="" class="card-image">
+              <img
+                src="https://cdn.dribbble.com/users/1003944/screenshots/16934771/hug_1_still_2x.gif?compress=1&resize=400x300"
+                alt="" class="card-image" />
               <div class="card-body">
-                <h3 class="heading-5">App required</h3>
-                <p class="text textcard">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <h3 class="heading-5">Easy-to-Use</h3>
+                <p class="text textcard">
+                  Our developed AR business card creator is simple,
+                  easy-to-use and user friendly
+                </p>
               </div>
             </div>
             <div class="card card-shadow">
-              <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/60634366c830268a8a0f8c16_Tick.jpg"
-                alt="" class="card-image">
+              <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/6063437627b004085486f0d6_Phone.jpg"
+                alt="" class="card-image" />
               <div class="card-body">
-                <h3 class="heading-5">App required</h3>
-                <p class="text textcard">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <h3 class="heading-5">iOS & Android</h3>
+                <p class="text textcard">
+                  A cross platform mobile application that can be downloaded
+                  on both iOs and Android platforms
+                </p>
+              </div>
+            </div>
+
+            <div class="card card-shadow">
+              <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/6063446378998f14e6f4dbd2_Print.jpg"
+                alt="" class="card-image" />
+              <div class="card-body">
+                <h3 class="heading-5">Different Card Types</h3>
+                <p class="text textcard">
+                  We provide four different card types and you can choose your
+                  wanted one
+                </p>
               </div>
             </div>
             <div class="card card-shadow">
-              <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/60634366c830268a8a0f8c16_Tick.jpg"
-                alt="" class="card-image">
+              <img
+                src="https://media.istockphoto.com/id/1409509814/vector/email-sending-icon-in-flat-style-envelope-receive-vector-illustration-on-isolated-background.jpg?s=612x612&w=0&k=20&c=aN5F1Lul4HUliDH63KZeX-cZ-K9HZKC2pN4rM6-yBpw="
+                alt="" class="card-image" />
               <div class="card-body">
-                <h3 class="heading-5">App required</h3>
-                <p class="text textcard">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+                <h3 class="heading-5">Receive Your Card By Email</h3>
+                <p class="text textcard">
+                  You will receive your card by email once it becomes ready
+                </p>
               </div>
             </div>
             <div class="card card-shadow">
-              <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/60634366c830268a8a0f8c16_Tick.jpg"
-                alt="" class="card-image">
+              <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/606343705aef38a62f707f6c_Link.jpg"
+                alt="" class="card-image" />
               <div class="card-body">
-                <h3 class="heading-5">App required</h3>
-                <p class="text textcard">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-              </div>
-            </div>
-            <div class="card card-shadow">
-              <img src="https://uploads-ssl.webflow.com/60633661a010fe54ba207252/60634366c830268a8a0f8c16_Tick.jpg"
-                alt="" class="card-image">
-              <div class="card-body">
-                <h3 class="heading-5">App required</h3>
-                <p class="text textcard">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <h3 class="heading-5">Many linking options</h3>
+                <p class="text textcard">
+                  Connect your card to videos, links, and more for an
+                  immersive experience
+                </p>
               </div>
             </div>
           </div>
@@ -198,31 +225,31 @@
   </div>
   <!-- End Featuers Section -->
   <!-- Start Gallery Card  -->
-  <div class="gallery">
+  <div class="gallery" id="order">
     <div class="gallery-container">
       <div class="swiper gallery-cards">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <article class="gallery__card">
-              <img src="images/Student_RahafMansour.jpg" alt="image gallery" class="gallery__img">
+              <img src="images/Student_RahafMansour.jpg" alt="image gallery" class="gallery__img" />
             </article>
           </div>
 
           <div class="swiper-slide">
             <article class="gallery__card">
-              <img src="images/Freelancer_YahyaHaj.jpg" alt="image gallery" class="gallery__img">
+              <img src="images/Freelancer_YahyaHaj.jpg" alt="image gallery" class="gallery__img" />
             </article>
           </div>
 
           <div class="swiper-slide">
             <article class="gallery__card">
-              <img src="images/Company_ProGineer.jpg" alt="image gallery" class="gallery__img">
+              <img src="images/Company_ProGineer.jpg" alt="image gallery" class="gallery__img" />
             </article>
           </div>
 
           <div class="swiper-slide">
             <article class="gallery__card">
-              <img src="images/AQU.jpg" alt="image gallery" class="gallery__img">
+              <img src="images/AQU.jpg" alt="image gallery" class="gallery__img" />
             </article>
           </div>
         </div>
@@ -232,25 +259,25 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="gallery__thumbnail">
-                <img src="images/Student_RahafMansour.jpg" alt="image thumbnail" class="gallery__thumbnail-img">
+                <img src="images/Student_RahafMansour.jpg" alt="image thumbnail" class="gallery__thumbnail-img" />
               </div>
             </div>
 
             <div class="swiper-slide">
               <div class="gallery__thumbnail">
-                <img src="images/Freelancer_YahyaHaj.jpg" alt="image thumbnail" class="gallery__thumbnail-img">
+                <img src="images/Freelancer_YahyaHaj.jpg" alt="image thumbnail" class="gallery__thumbnail-img" />
               </div>
             </div>
 
             <div class="swiper-slide">
               <div class="gallery__thumbnail">
-                <img src="images/Company_ProGineer.jpg" alt="image thumbnail" class="gallery__thumbnail-img">
+                <img src="images/Company_ProGineer.jpg" alt="image thumbnail" class="gallery__thumbnail-img" />
               </div>
             </div>
 
             <div class="swiper-slide">
               <div class="gallery__thumbnail">
-                <img src="images/AQU.jpg" alt="image thumbnail" class="gallery__thumbnail-img">
+                <img src="images/AQU.jpg" alt="image thumbnail" class="gallery__thumbnail-img" />
               </div>
             </div>
           </div>
@@ -268,13 +295,21 @@
         </div>
       </div>
     </div>
-    <!--Form Secion -->
+    <!--  -->
+
     <div class="gallery-title">
-      <h2>Choice The Card </h2>
-      <p>lorem ipsum dolor sit amet, consectetur adip</p>
+      <h2>Let's Create Something Different Together</h2>
+      <p class="order-text">
+        Click on the order button and select your preferred card type from our
+        four options: Student Card, Freelancer Card, Company Card, or Special
+        Card. Fill in the necessary information that will appear on the AR
+        vision upon scanning the card. Once your card is ready, we'll send it
+        to by email. Get ready to enjoy an unparalleled interactive experience
+        with your own custom AR business card!
+      </p>
       <!-- Start Button form -->
       <!-- popup -->
-      <button id="popup-button" class="button-3">Button</button>
+      <button id="popup-button" class="button-3 desktop ">Button</button>
       <div id="overlay"></div>
       <div id="form-box">
         <form id="my-form" style="display: none;">
@@ -373,35 +408,47 @@
             <!-- End Button form -->
           </div>
       </div>
+    </div>
+  </div>
+  <footer>
+    <p>Developed by Rahaf Mansour & Yahya Haj Ali</p>
+    <p>All rights reserved &copy; 2023</p>
 
+    <div class="footer-icons">
+      <a href="mailto:rahafyahya2023@gmail.com
+    "><i class="fa fa-envelope" aria-hidden="true"></i>
+      </a>
+      <a href="https://github.com/Eng-Raya"><i class="fa-brands fa-github"></i></a>
+    </div>
+  </footer>
 
-      <!-- Secript JS -->
-      <script src="assets/js/swiper-bundle.min.js"></script>
-      <script src="assets/js/main.js"></script>
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-      <script>
-        $(document).ready(function () {
-          $("#student-button").click(function () {
-            $(".form-group").hide();
-            $("#student-form").show();
-          });
+  <!-- Secript JS -->
+  <script src="assets/js/swiper-bundle.min.js"></script>
+  <script src="assets/js/main.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $("#student-button").click(function () {
+        $(".form-group").hide();
+        $("#student-form").show();
+      });
 
-          $("#freelancer-button").click(function () {
-            $(".form-group").hide();
-            $("#freelancer-form").show();
-          });
+      $("#freelancer-button").click(function () {
+        $(".form-group").hide();
+        $("#freelancer-form").show();
+      });
 
-          $("#company-button").click(function () {
-            $(".form-group").hide();
-            $("#company-form").show();
-          });
+      $("#company-button").click(function () {
+        $(".form-group").hide();
+        $("#company-form").show();
+      });
 
-          $("#special-button").click(function () {
-            $(".form-group").hide();
-            $("#special-form").show();
-          });
-        });
-      </script>
+      $("#special-button").click(function () {
+        $(".form-group").hide();
+        $("#special-form").show();
+      });
+    });
+  </script>
 </body>
 
 </html>
