--- a/index.html
+++ b/index.html
@@ -309,7 +309,9 @@
       </p>
       <!-- Start Button form -->
       <!-- popup -->
-      <button id="popup-button" class="button-3 desktop ">Button</button>
+      <button id="popup-button" class="button-3 desktop">
+          Order Now <i class="fas fa-shopping-cart"></i>
+        </button>
       <div id="overlay"></div>
       <div id="form-box">
         <form id="my-form" style="display: none;">
